[package]
name = "medea"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
once_cell = "1.13.0"
rayon = { version = "1.5.3", optional = true }
suffix = "1.3.0"

[feature]
default = ["multi-thread"]
multi-thread = ["dep:rayon"]
